tja we might need a full redesign but i had a play

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 </head>
 
 <body>
-	<img src="img/logo.png" alt="logo" />
+	<img src="img/logo.png" alt="logo" class="logo" />
 	<nav class="navigation">
 		
 		<ul>
@@ -36,34 +36,39 @@
 			<li><a href="examples.html">examples</a></li>
 		</ul>
 	</nav>
-
-<h1>AI Literacy.fyi</h1>
-<h2>
-  <span id="typed"></span>
-    <div id="typed-strings">
-      <p>Trustworthy AI</p>
-      <p>Civic responsibility</p>
-      <p>Common good</p>
-      <p>Algorithmic understanding</p>
-      <p>Global Equity</p>
-      <p>Data privacy</p>
-      <p>Inclusive practices</p>
-      <p>Emancipatory literacies</p>
-    </div>
-</h2>
-<br>
-  <ul>
-	<li>🤔 <a href="definitions.html">Definitions</a></li>
-	<li>📚 <a href="library.html">Library</a></li>
-    <li>🎈 <a href="examples.html">Examples</a></li>
-  </ul>
-<hr />
-<ul style="font-size:0.8em;">
-	<li>🎙️ <a href="https://wiobyrne.com/navigating-the-future-of-media-and-information-literacy/">Navigating the Future of Media and Information Literacy: A Transdisciplinary Approach</a></li>
-	<li>📝 <a href="https://wiobyrne.com/educations-essential-role-in-the-ai-revolution/">Response to positioning paper for the UN Internet Governance Forum</a></li>
-    <li>🌐 <a href="https://blog.weareopen.coop/ai-literacy-a-cross-sectional-slice-of-new-literacies-1906c8e44abe/">Response to UNESCO Call for Contributions</a></li>
-</ul>
-<a href="https://weareopen.coop" text-decoration: none;"><img src="img/wao-white.svg" width="75px" alt="WAO logo"></a>
+	<section class="content">
+		<h2 class="strings">
+		  <span id="typed"></span>
+		    <div id="typed-strings">
+		      <p>Trustworthy AI</p>
+		      <p>Civic responsibility</p>
+		      <p>Common good</p>
+		      <p>Algorithmic understanding</p>
+		      <p>Global Equity</p>
+		      <p>Data privacy</p>
+		      <p>Inclusive practices</p>
+		      <p>Emancipatory literacies</p>
+		    </div>
+		</h2>
+		<p>We Are Open Co-op (WAO) is a collective of individuals who share a commitment to ethical, inclusive, and sustainable practices in all aspects of our work, including AI literacy. Our approach to AI is informed by constructivism, pragmatism, and systems thinking, ensuring that our efforts are placed within broader historical, social, and technological contexts.
+Our founding members are well-versed in this area. Doug Belshaw wrote his thesis on the concept of digital literacies, while Laura Hilliger wrote her thesis on web literacy. Along with John Bevan, they worked on the Mozilla Webmaker programme, and more recently have responded to a UNESCO call on for definitions of <a href="https://blog.weareopen.coop/ai-literacy-a-cross-sectional-slice-of-new-literacies-1906c8e44abe">AI and data literacy</a>, and <a href="https://ic4ml.org/journal-article/promoting-informed-citizenship-in-a-connected-world-advancing-media-and-information-literacy/">published a paper</a> on what media and information literacy mean in today’s connected world. 
+		</p>
+		<br>
+		  <ul>
+			<li>🤔 <a href="definitions.html">Definitions</a></li>
+			<li>📚 <a href="library.html">Library</a></li>
+		    <li>🎈 <a href="examples.html">Examples</a></li>
+		  </ul>
+		<hr />
+		<ul style="font-size:0.8em;">
+			<li>🎙️ <a href="https://wiobyrne.com/navigating-the-future-of-media-and-information-literacy/">Navigating the Future of Media and Information Literacy: A Transdisciplinary Approach</a></li>
+			<li>📝 <a href="https://wiobyrne.com/educations-essential-role-in-the-ai-revolution/">Response to positioning paper for the UN Internet Governance Forum</a></li>
+		    <li>🌐 <a href="https://blog.weareopen.coop/ai-literacy-a-cross-sectional-slice-of-new-literacies-1906c8e44abe/">Response to UNESCO Call for Contributions</a></li>
+		</ul>
+	</section>
+	<footer>
+<a href="https://weareopen.coop"><img src="img/wao-white.svg" width="75px" alt="WAO logo"/></a>
+	</footer>
 	
 <script src="js/main.js"></script>
 </body></html>
